[project]
name = "pylitesvm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kevinheavey", email = "heaveykevin2@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.maturin]
python-source = "python"
module-name = "pylitesvm._lowlevel"
features = ["pyo3/extension-module"]
